# lea-prover

./: .gitignore  DESIGN.md  README.md  USAGE.md  lea-api-design.md  lea-roadmap.md  pyproject.toml
configs/: default.yaml  lean-lsp.yaml
docker/: .dockerignore  README.md  fqb.Dockerfile  minif2f.Dockerfile  putnam.Dockerfile
docs/: README.md  decisions.md  design.html  design.md  lean-lsp-mcp.md  theorem-translation-approval-ui-handoff.md  theorem-translation-preflight-revision-request.md
eval/: README.md  fqb_bon5_analysis.json  fqb_bon5_failures.json  probe_providers.py  replay.py  run_baseline.py  run_fqb.py  run_fqb_best_of_n.py  run_fqb_parallel.py  run_minif2f.py  run_minif2f_parallel.py  run_putnam.py
eval/sample_artifact/: start.lean  transcript.json  verify.json
eval/utils/: verify.py
examples/: api_client.py
fqb-reports/: fqb-bon5-report.html  fqb-bon5-report.md  fqb-report.html  fqb-report.md
lea/: agent.py  cli.py  config.py  errors.py  events.py  lsp_daemon.py  mcp.py  prompt.py  providers.py  registry.py  render.py  sketch.py  skills.py  tools.py  validation.py
lea/env/: __init__.py  docker.py  local.py
lea/prompts/: putnam.md
lea_api/: README.md  __init__.py  __main__.py  app.py  auth.py  config_support.py  errors.py  jobs.py  settings.py  verify.py  wire.py
lea_api/routers/: __init__.py  config.py  meta.py  runs.py  tools.py  verify.py
skills/: lean_lsp_proving.md
tests/agent/: test_run_events.py
tests/api/: conftest.py  test_bridge.py  test_endpoints.py  test_errors.py  (+2 more)
workspace 2/: lake-manifest.json  lakefile.lean
(+43 files in other folders)
